@@ -1,4 +1,3 @@
 jQuery(document).ready(function($){
 	$("ul").parent("li").addClass("parent"); 
-	$('#nav_menu').mobileMenu();
 });
